# bazel-kotlin-jvm-default-issue

./: .gitignore  BUILD.bazel
module/: BUILD.bazel  Interface.kt  JavaImplementation.java  main.kt
plugin/: BUILD.bazel  Plugin.java
